Bug 96288 - [Bay Trail-I] HDMI got black screen after boot with 4.0+ kernels
Summary: [Bay Trail-I] HDMI got black screen after boot with 4.0+ kernels
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-31 10:00 UTC by Phidias Chiang
Modified: 2017-07-24 22:41 UTC (History)
2 users (show)

See Also:
i915 platform: BYT
i915 features: display/eDP


Attachments
dmesg with drm.debug=0xe (104.17 KB, text/plain)
2016-05-31 10:00 UTC, Phidias Chiang
no flags Details
Only ignore active eDP ports (4.71 KB, patch)
2016-05-31 11:38 UTC, Chris Wilson
no flags Details | Splinter Review
/sys/kernel/debug/dri/0/i915_opregion (8.00 KB, application/octet-stream)
2016-06-01 03:09 UTC, Phidias Chiang
no flags Details

Description Phidias Chiang 2016-05-31 10:00:02 UTC
Created attachment 124208 [details]
dmesg with drm.debug=0xe

CPU: E3826
Distro: Ubuntu 16.04 LTS

No graphic with 4.0+ kernels. After bisecting we've found this commit causes regression:

commit d2182a660808d9053a605e3ebc8c46a323ec6e5d
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date: Fri Jan 9 14:21:14 2015 +0200

    drm/i915: Don't register HDMI connectors for eDP ports on VLV/CHV

We reverted this commit in Ubuntu 16.04 kernel (v4.4) and graphic works.

The attachment is dmesg with drm.debug=0xe parameter, with v4.6 kernel from Ubuntu mainline kernel ppa.
Comment 1 Chris Wilson 2016-05-31 11:38:06 UTC
Created attachment 124211 [details] [review]
Only ignore active eDP ports
Comment 2 Chris Wilson 2016-05-31 11:45:11 UTC
Similar to (ivb) bug 88331
Comment 3 Phidias Chiang 2016-06-01 03:09:02 UTC
Created attachment 124224 [details]
/sys/kernel/debug/dri/0/i915_opregion
Comment 4 Phidias Chiang 2016-06-01 07:07:09 UTC
Patch in #2 has been tested with latest linux repo (a7e8aa), shows positive result
Comment 5 Chris Wilson 2016-06-01 09:09:25 UTC
commit 457c52d87e5dac9a4cf1a6a287e60ea7645067d4
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jun 1 08:27:50 2016 +0100

    drm/i915: Only ignore eDP ports that are connected
    
    If the VBT says that a certain port should be eDP (and hence fused off
    from HDMI), but in reality it isn't, we need to try and acquire the HDMI
    connection instead. So only trust the VBT edp setting if we can connect
    to an eDP device on that port.
    
    Fixes: d2182a6608 (drm/i915: Don't register HDMI connectors for eDP ports on VLV/CHV)
    References: https://bugs.freedesktop.org/show_bug.cgi?id=96288
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Tested-by: Phidias Chiang <phidias.chiang@canonical.com>
    Cc: Ville Syrjälä <ville.syrjala@linux.intel.com>
    Cc: Jani Nikula <jani.nikula@intel.com>
    Cc: Daniel Vetter <daniel.vetter@ffwll.ch>
    Reviewed-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
    Link: http://patchwork.freedesktop.org/patch/msgid/1464766070-31623-1-git-send-email-chris@chris-wilson.co.uk
Comment 6 Chris Wilson 2016-06-01 09:10:08 UTC
I'll leave the bug open in case Ville (or anybody else) finds something exciting in the opregion/vbt we can use.
Comment 7 Ville Syrjala 2016-06-02 13:29:57 UTC
(In reply to Chris Wilson from comment #6)
> I'll leave the bug open in case Ville (or anybody else) finds something
> exciting in the opregion/vbt we can use.

Didn't spot anything interesting in the VBT. It was very consistently claiming the presence of eDP. Marking as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.